package edu.hitsz.Props;

import edu.hitsz.application.Main;
import edu.hitsz.basic.FlyingObject;

/**
 * 火力道具
 * @author 200110501符悦泽
 */

public class FirePowerProps extends FlyingObject {
    //Constructor
    public FirePowerProps(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
